--- a/MainPage/templates/MainPage/MainPage.html
+++ b/MainPage/templates/MainPage/MainPage.html
@@ -8,6 +8,8 @@
     <title>Главная</title>
 </head>
 <body>
+{#{% load static %}#}
+{#<link rel="stylesheet" type="text/css" href="{% static 'MainPageStyles.css' %}">#}
 <h3>Оп</h3>
 </body>
 </html>
