having fun ( I hope no one really sees it )

--- a/MainPage/templates/MainPage/AboutPage.html
+++ b/MainPage/templates/MainPage/AboutPage.html
@@ -1,13 +1,23 @@
-<!doctype html>
-<html lang="ru">
+{% extends 'MainPage/base.html' %}
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>О нас</title>
+    <title>Про нас</title>
 </head>
-<body>
-<p>Информация</p>
-</body>
-</html>
+
+{% block title %}
+Страница про нас
+{% endblock %}
+
+{% block content %}
+    <img src="static/img/dontunderstand.jpg" alt="эх" width="500" height="500">
+
+    <h1>Вам стоит обратиться к опросам</h1>
+
+    {# прикрутить возврат (с помощью script?) #}
+<button name="returnMain" value="wanttoreturn">
+<img style="vertical-align: middle; width: 24px;" src="https://icon-library.com/images/return-icon-png/return-icon-png-3.jpg" alt="" />
+Вернуться на главную
+</button>
+
+{% endblock %}
+
